tests/check/illegal_decl.co
// RUN: not choreo -gs %s 2>&1 | FileCheck %s

__co__ auto foo(f32 [2,4] a, int b) {
  f32 [a.span] c;
  parallel by 1 {
    a = "hello";
    b = &c;
    d = "world";
  }
  d = &a;
}

// CHECK: error: `a' of type "f32 mdspan<2> []" can not be re-assigned as "string".
// CHECK: error: pointer variables are not supported.
// CHECK: error: string variables are not supported yet.
// CHECK: error: pointer variables are not supported.
